--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -1,4 +1,6 @@
 .search-container {
+  -webkit-box-shadow: 0px 15px 21px -15px rgba(29,29,29,0.29); 
+  box-shadow: 0px 15px 21px -15px rgba(29,29,29,0.29);
   margin: 2em auto;
   display: flex;
   flex-direction: row;
