--- a/client/src/CommonStyle.css
+++ b/client/src/CommonStyle.css
@@ -46,8 +46,13 @@
 /* MAIN & COMMON STYLE */
 body {
   background: #f7f7fa;
-  color: var(--black);
+  color: var(--blue-grey);
   font-family: 'Ubuntu', sans-serif;
+  
+}
+
+.page-container {
+  min-height: 100vh;
   padding: 0 1.3em 2.5em;
 }
 
@@ -60,6 +65,11 @@ body {
   border: 0;
   border-radius: 10px;
   text-decoration: none;
+}
+
+.btn-container {
+  text-align: right;
+  align-self: flex-end;
 }
 
 .green {
@@ -91,6 +101,21 @@ h4 {
 
 p {
   margin: 0;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex {
+  display: flex;
+}
+
+.middle {
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 
@@ -223,4 +248,21 @@ button:hover {
   overflow: hidden;
   text-overflow: ellipsis;
   width: 210px;
+}
+
+
+/* SUCCESS */
+.success-page svg {
+  font-size: 7em;
+  color: var(--accent-color);
+}
+
+.success-page h1 {
+  font-weight: normal;
+  margin-top: 1.5em;
+}
+
+.success-page p {
+  font-weight: normal;
+  margin-bottom: 2.5em;
 }
