--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -21,7 +21,6 @@
     display: block;
     position: fixed;
     bottom: 0;
-    z-index: 1;
   }
  }
 
@@ -31,6 +30,7 @@
   background: white;
   width: 100vw;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 .nav-container {
@@ -43,6 +43,8 @@
 
 .desktop .nav-container {
   padding: 1.5em 3em;
+  min-height: 67px;
+  max-height: 67px;
 }
 
 .mobile .nav-container {
