--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
 
 .search-container .fa-filter {
@@ -32,4 +34,20 @@
   margin: 0 0.5em;
   padding: .5em;
   flex-grow: 2;
+  background: transparent;
+}
+
+@media (min-width: 992px) {
+  .search-container {
+    margin: 0; 
+    box-shadow: none;
+  }
+
+  .SearchBar {
+    background: #aeb5c547;
+  }
+
+  .search-container .fa-filter {
+    padding: .7em .5em;
+  }
 }
