--- a/client/src/CommonStyle.css
+++ b/client/src/CommonStyle.css
@@ -376,3 +376,8 @@ button:hover {
   font-weight: normal;
   font-size: .8em;
 }
+
+.desktop-map-container {
+  display: flex;
+  flex-direction: row;
+}
