--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -22,11 +22,11 @@
   }
 }
 
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
   .mobile-address-input {
     display: none;
   }
-}
+} */
 
 .SearchBar svg {
   fill: var(--blue-grey);
@@ -65,6 +65,8 @@
 
 .searchbar-place-around-me-button.dl-button {
   height: 40px;
+  position: absolute;
+  top: 0;
 }
 
 .searchbar-input-icon {
@@ -169,4 +171,14 @@
 
 .search-container .fa-filter svg {
   fill: white;
+}
+
+span.searchbar-input-icon:after {
+  bottom: 0;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: transparent;
 }
