--- a/client/src/CommonStyle.css
+++ b/client/src/CommonStyle.css
@@ -53,7 +53,7 @@ body {
 
 .page-container-mobile {
   min-height: 100vh;
-  padding: 0 1.3em 2.5em;
+  padding: 1.3em 1.3em 2.5em;
 }
 
 .page-container-desktop {
@@ -167,6 +167,10 @@ button:hover {
   height: calc(100vh - 85px);
 }
 
+div#searchlist {
+  margin: 0;
+}
+
 .vertical-category-container {
   display: flex;
   flex-direction: column;
@@ -224,6 +228,7 @@ button:hover {
   height: 215px;
   width: 100%;
   min-width: 250px;
+  max-width: 250px;
   border-radius: 15px;
 }
 
@@ -356,6 +361,11 @@ button:hover {
   min-width: 400px;
 }
 
+#searchlist .vertical-list {
+  min-width: 80vw;
+  max-width: 80vw;
+}
+
 .vertical-list:hover {
   background: var(--accent-color);
 }
@@ -392,7 +402,7 @@ button:hover {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 230px;
+  width: 200px;
 }
 
 .vertical-store-info h4 {
@@ -419,6 +429,7 @@ button:hover {
 
 @media (max-width: 991.98px) { 
   .desktopFilteredMap {
+    position: block !important;
     width: 100% !important;
     height: calc(100% - 40px) !important;
     margin: calc(-1.3em - 40px) 0 0 -1.3em;
@@ -487,4 +498,12 @@ button:hover {
   justify-content: space-between;
   margin-top: 1em;
   font-weight: bolder;
+}
+
+[aria-expanded="false"] + * {
+  display: none;
+}
+
+.map-view-container {
+  padding-top: 1.3em;
 }
