--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -24,7 +24,7 @@
 
 @media (max-width: 992px) {
   .SearchBar {
-    margin-top: 1.3em;
+    /* margin-top: 1.3em; */
   }
 }
 
@@ -75,7 +75,7 @@
   left: 16px;
   width: 20px;
   height: 20px;
-  pointer-events: none;
+  /* pointer-events: none; */
   fill: var(--blue-grey);
 }
 
