--- a/client/src/CommonStyle.css
+++ b/client/src/CommonStyle.css
@@ -442,7 +442,7 @@ div#searchlist {
 }
 
 .command-card {
-  background: #f0f4f8;
+  background: #eaeff5;
   height: 100%;
   width: 85vw;
   margin: auto;
