--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -39,6 +39,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  align-content: center;
 }
 
 .desktop .nav-container {
@@ -54,6 +55,10 @@
 .nav-menu ul {
   list-style: none;
   margin: 0;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 .nav-menu li {
@@ -96,4 +101,15 @@
 
 .mobile .nav-label {
   font-size: 0.6em;
+}
+
+.logout-btn {
+  background: none;
+  color: var(--accent-color);
+  padding: 0;
+  margin: 0;
+}
+
+button.logout-btn::before {
+  content: "";
 }
