--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -27,6 +27,13 @@
     /* margin-top: 1.3em; */
     max-width: calc(237px + 237px);
   }
+
+  .SearchBar.searchbar-desktop-position {
+    position: absolute;
+    top: 1.3em;
+    left: 1.3em;
+    right: 1.3em;
+  }
 }
 
 .SearchBar svg {
@@ -98,8 +105,10 @@
 
 .searchbar-place-around-me-button {
   position: absolute;
-  width: 100%;
-  left: 0;
+  /* width: 100%;
+  left: 0; */
+  width: auto;
+  right: 0;
   -webkit-transform: translateX(100%) translateX(-51px);
   transform: translateX(100%) translateX(-51px);
   color: #435f71;
@@ -120,7 +129,7 @@
   height: 16px;
   width: 16px;
   position: relative;
-  top: 3px;
+  top: 1px;
   left: 3px;
 }
 
