--- a/client/src/components/StoreDetails/StoreDetails.css
+++ b/client/src/components/StoreDetails/StoreDetails.css
@@ -1,5 +1,6 @@
 .top-detail-section {
   height: 30vh;
+  min-height: 350px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -10,6 +11,7 @@
 .relativeParent {
   position: relative;
   height: 30vh;
+  min-height: 350px;
 }
 
 .detail-store-info {
@@ -17,6 +19,11 @@
   bottom: 35px;
   padding: 1.3em;
   text-align: left;
+}
+
+.detail-store-info p.nearby-store-address {
+  width: 100%;
+  text-overflow: initial;
 }
 
 .top-detail-section h1 {
@@ -27,7 +34,7 @@
 .bottom-detail-section {
   background: var(--grey-bg);
   border-radius: 15px 15px 0 0;
-  margin: -35px -1.3em;
+  margin: -35px -1.3em 0;
   z-index: 1;
   padding: 1.5em 1.3em;
   text-align: left;
@@ -60,7 +67,8 @@
   text-align: center;
   font-size: 12px;
   text-decoration: none;
-  width: 26vw;
+  /* width: 26vw; */
+  width: 42vw;
   background: var(--accent-color);
   padding: .5em 1em;
   color: white;
@@ -69,6 +77,19 @@
   justify-content: center;
   font-weight: bolder;
   margin-top: .5em;
+}
+
+@media (min-width: 992px) { 
+  .tri-btn {
+    justify-content: center;
+  }
+  
+  .tri-btn a {
+    width: auto;
+    min-width: 50px;
+    margin: .7em;
+    padding: 1em 1.3em;
+  }
 }
 
 hr {
@@ -202,6 +223,7 @@ button.react-calendar__tile.react-calendar__month-view__days__day {
   display: flex;
   flex-wrap: wrap;
   margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .appointmentPickerBtn::before {
@@ -226,24 +248,57 @@ button.react-calendar__tile.react-calendar__month-view__days__day {
   width: 20%;
 }
 
-.Non-AvailableTime {
-  background-color: red;
+@media (min-width: 992px) { 
+  .appointmentPickerBtnDiv {
+    width: 6vw;
+  }
 }
 
-button.bookAppointmentBtn {
-  margin-right: -7.9em;
+.appointmentPickerDiv form {
+  text-align: right;
+  margin-bottom: 2.3em;
+  margin-top: -2em;
 }
+
+.Non-AvailableTime {
+  color: var(--grey);
+  font-style: italic;
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
+/* button.bookAppointmentBtn {
+  margin-right: -7.9em;
+} */
 
 .storeDetailsMap {
   width: calc(100vw - 2.6em) !important;
   height: 25vh !important;
-  margin: auto;
+  margin: 0 auto 1.3em;
   border-radius: 15px;
   position: relative !important;
 }
 
+@media (min-width: 992px) { 
+  .storeDetailsMap {
+    width: calc(48vw - 2.6em) !important;
+    margin: 0;
+  }
+
+  .product-list-container {
+    width: 50vw;
+  }
+
+  .listOfProducts {
+    display: flex;
+    align-items: flex-start;
+    align-content: center;
+    justify-content: space-between;
+  }
+}
+
 .product-list-container {
-  margin-top: 1.3em;
+  margin-bottom: 1.3em;
 }
 
 .product-row {
