--- a/client/src/components/auth/SignForm.css
+++ b/client/src/components/auth/SignForm.css
@@ -50,6 +50,11 @@
   min-height: 100vh;
 }
 
+.sign-form .redirect-link {
+  text-decoration: none;
+  color: var(--accent-color);
+}
+
 @media (min-width: 992px) { 
   .sign-form {
     max-width: 650px;
